--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header id="main-header">
       <div class="row no-gutters">
         <div class="col-md-5 col-lg-4">
-          <img src="img/person1.jpg" alt="John Doe" />
+          <img src="img/person1.jpg" alt="Yashvardhan Singh Bhadauria" />
         </div>
 
         <div class="col-md-7 col-lg-8">
